--- a/arch/arm64/configs/kylo_defconfig
+++ b/arch/arm64/configs/kylo_defconfig
@@ -46,6 +46,7 @@ CONFIG_SYSVIPC_SYSCTL=y
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDIT_LOGINUID_IMMUTABLE is not set
+CONFG_WQ_POWER_EFFICIENT_DEFAULT=y
 
 #
 # IRQ subsystem
