--- a/arch/arm64/configs/kylo_defconfig
+++ b/arch/arm64/configs/kylo_defconfig
@@ -37,7 +37,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 CONFIG_LOCALVERSION=""
-CONFIG_LOCALVERSION_AUTO=y
+#CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
@@ -48,6 +48,7 @@ CONFIG_AUDIT=y
 # CONFIG_AUDIT_LOGINUID_IMMUTABLE is not set
 CONFG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_POWERSUSPEND=y
+CONFIG_WAKE_GESTURES=y
 
 #
 # IRQ subsystem
