--- a/arch/arm64/configs/saber_defconfig
+++ b/arch/arm64/configs/saber_defconfig
@@ -419,7 +419,7 @@ CONFIG_ARM64_CPU_SUSPEND=y
 #
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_COMMON=y
-# CONFIG_SCHED_FREQ_INPUT is not set
+CONFIG_SCHED_FREQ_INPUT=y
 CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
@@ -3807,4 +3807,3 @@ CONFIG_OID_REGISTRY=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 CONFIG_STRICT_MEMORY_RWX=y
-CONFIG_QUICK_WAKEUP=y
