--- a/arch/arm64/configs/saber_defconfig
+++ b/arch/arm64/configs/saber_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.10.85 Kernel Configuration
+# Linux/arm64 3.10.100 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -320,11 +320,8 @@ CONFIG_HOTPLUG_CPU=y
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
 CONFIG_SWP_EMULATE=y
-# CONFIG_HZ_100 is not set
-# CONFIG_HZ_250 is not set
-# CONFIG_HZ_300 is not set
-# CONFIG_HZ_1000 is not set
 CONFIG_HZ=300
+CONFIG_HZ_300=y
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
 CONFIG_ARCH_SPARSEMEM_ENABLE=y
 CONFIG_ARCH_SPARSEMEM_DEFAULT=y
@@ -2252,6 +2249,7 @@ CONFIG_TSPP=y
 # Media ancillary drivers (tuners, sensors, i2c, frontends)
 #
 CONFIG_MEDIA_SUBDRV_AUTOSELECT=y
+CONFIG_MEDIA_ATTACH=y
 
 #
 # Audio decoders, processors and mixers
@@ -3116,7 +3114,6 @@ CONFIG_ONESHOT_SYNC=y
 CONFIG_ION=y
 # CONFIG_ION_TEST is not set
 CONFIG_ION_MSM=y
-# CONFIG_ALLOC_BUFFERS_IN_4K_CHUNKS is not set
 # CONFIG_FIQ_DEBUGGER is not set
 # CONFIG_FIQ_WATCHDOG is not set
 # CONFIG_USB_WPAN_HCD is not set
